Fixing form navigation

--- a/McTools.Xrm.Connection.WinForms/ConnectionSelector.resx
+++ b/McTools.Xrm.Connection.WinForms/ConnectionSelector.resx
@@ -118,78 +118,77 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="SimpleImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>134, 17</value>
+    <value>112, 14</value>
   </metadata>
   <metadata name="menu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>15, 14</value>
   </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="tsFiles.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>426, 17</value>
   </metadata>
   <metadata name="detailImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>568, 17</value>
+    <value>474, 14</value>
   </metadata>
   <data name="detailImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAE
-        DQAAAk1TRnQBSQFMAgEBAwEAAVgBAAFYAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEB4AA0ABcQMsAUT4AANKAYoDSAGFAlcBVQG3Ax0BKjgAAy0BRgNdAdIDaQH/
-        A2UB/wNgAf8DXAH/A1gB/wNdAdcsAAMRARcDFgEfAwQBBmAAAWgBYgFcAeIDAAEBAk4BTQGWAbUBiwEy
-        AfsCTgFNAZUDDwEUKAADMAFLA1wBzAOjAf8BxgHFAcQB/wHZAdQB0wH/AdQBzwHOAf8B0wHOAc0B/wHT
-        Ac4BzQH/AegC5QH/A1kB/xAAA0ABcQFWAVwBVAHnAVYBWQFTAesDRQF/AwcBCgFFAUYBRQF+AVgBYgFY
-        AeMBLQGSAQQB/wEqAY8BAQH/AT8BgAEzAfcBVQFWAVUBsQMmAThYAAHdAZYBLwH/AygBPAMCAQMCUgFQ
-        AaQB3QGWAS8B/wF+AWsBUAHvAkIBQQFzAwQBBhwAA1wByQOzAf8D1AH/AeEC3wH/AcUBvwG9Af8BvQG1
-        AbMB/wG5AbEBsAH/AbkBsQGuAf8BtwGvAa4B/wHTAc4BzQH/A10B/wwAAy8BSQEjAUUBAAH/ASEBQgEA
-        Af8BHgE/AQAB/wEZAToBAAH/AVoBZAFVAecBOQGfARIB/wE2AZwBDwH/ATMBmQELAf8BMAGXAQgB/wEt
-        AZQBBQH/ASoBkQEBAf8BPQGOARQB/QFFAUYBRQF+VAAB3QGWAS8B/wJOAU0BlgQAAwQBBgJWAVUBtAHd
-        AZYBLwH/Ad0BlgEvAf8BYwFgAVcB3wM2AVkDAAEBFAADogH/A/AB/wPgAf8B1ALSAf8BvgG2AbUB/wG8
-        AbUBtAH/AbsBtAGyAf8BugGyAbEB/wG5AbEBrwH/AdQBzwHOAf8DYgH/DAADUwGqAScBTAEAAf8BJgFJ
-        AQAB/wEjAUYBAAH/ASwBYQEAAf8BKgFkAQAB/wE7AZsBFwH/ATYBlgEUAf8BMgGPAQ4B/wEzAZUBDQH/
-        ATMBmwEMAf8BMAGZAQkB/wEtAZYBBgH/ASoBkwECAf8DQgF0UAAB3QGWAS8B/wF4AWoBWQHrAwMBBAQA
-        AwcBCgJbAVkBwwHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/wNZAccUAAOoAf8D6gH/A90B/wHVAdQB0wH/
-        AcABuQG3Af8BvgG3AbYB/wG9AbYBtAH/AbsBtAGzAf8BuwGzAbEB/wHUAdABzwH/A2gB/wwAAV0BXgFX
-        AeUBKwFSAQAB/wEpAU8BAAH/ASoBVAEAAf8BNwGBAQAB/wEuAWYBAAH/AUIBmgEqAf8BWAHKAUsB/wFR
-        AcMBQwH/ATYBjwEaAf8BKQFwAQAB/wE2AZ0BDwH/ATQBngENAf8BMQGbAQoB/wE+AX0BMQH4AxgBIUwA
-        Ad0BlgEvAf8B3QGWAS8B/wMuAUgIAAMLAQ8BXgFcAVgB0QHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/xQA
-        A68B/wPrAf8D3QH/AdcC1QH/AcEBuwG5Af8BwAG5AbgB/wG+AbgBtgH/ATABoQE3Af8BLAGUASwB/wHW
-        AdEB0AH/A20B/wwAATwBZgEMAf4BLwFZAQEB/wEtAVYBAAH/ATIBZAEAAf8BOgGEAQAB/wFMAZ0BKQH/
-        AYIB5wFxAf8BcgHmAWwB/wFtAecBZgH/AWkB5gFhAf8BOgGSARwB/wEuAYMBAwH/AToBpQEVAf8BNwGi
-        ARIB/wE0AaABDwH/A0oBikwAAd0BlgEvAf8B3QGWAS8B/wNRAaIMAAMQARUBYwFfAVoB2wHdAZYBLwH/
-        Ad0BlgEvAf8UAAO1Af8D7AH/A94B/wHZAtgB/wHDAb0BuwH/AcIBuwG6Af8BwQG6AbkB/wGgAcgBpAH/
-        AUUBqQFLAf8B1wHTAdEB/wNzAf8MAAFLAV4BIQH6ATMBXwEBAf8BMQFdAQEB/wE2AWoBAAH/ATwBhgEA
-        Af8BdAHMAWMB/wGOAecBiAH/AYkB5gGDAf8BhAHmAXMB/wF0AeYBbgH/AV0BxQFNAf8BKwFqAQAB/wE9
-        AaQBGAH/AT0BqgEaAf8BOgGnARcB/wFYAVwBWAHRTAAB3QGWAS8B/wHdAZYBLwH/AYoBdQFOAfIDBgEI
-        BAADBQEHAysBQgMWAR4BaAFiAVgB4wHdAZYBLwH/FAADuwH/A+wB/wPfAf8B2gLZAf8BxgG/Ab4B/wHE
-        Ab4BvAH/AcMBvAG7Af8BwQG7AbkB/wHAAbkBuAH/AdcC0wH/A4QB/wwAAVsBYAFbAdYBNwFmAQIB/wE1
-        AWMBAQH/ATcBZwEBAf8BQQGMAQAB/wGJAc8BbAH/AZoB5wGVAf8BlQHmAZAB/wGQAeYBigH/AYsB5QGF
-        Af8BZwHHAVYB/wExAW8BAAH/AT4BngEVAf8BQwGxASMB/wFAAa4BHwH/AUkBgAFCAfVMAAHdAZYBLwH/
-        AYYBcQFTAfEDPAFmAwcBCgM/AW0BaAFiAVgB4wHdAZYBLwH/A1ABngMiATEBcgFlAVUB6hQAA8AB/wPs
-        Af8D4AH/Ad0C3AH/AccBwQHAAf8BkgKRAf8DjwH/A40B/wOKAf8B2QHVAdQB/wOLAf8MAAFLAUwBSwGP
-        ATsBbQECAf8BOgFqAQIB/wE4AWcBAQH/AUEBiAEAAf8BYgGtATcB/wGmAecBogH/AaEB5wGdAf8BnAHm
-        AZcB/wGXAeUBkgH/AVIBoQErAf8BNwGAAQAB/wFEAaQBHAH/AUoBuAErAf8BRwG1AScB/wFNAZgBLwH6
-        TAADVgG2AxsBJgNBAXIBbgFnAVgB5gHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/wHdAZYBLwH/A1kBxwMy
-        AVEUAAPGAf8D7wH/A+EB/wPdAf8ByAHDAcIB/wHIAcIBwQH/AcYBwQG/Af8BxQG/Ab4B/wHDAb0BuwH/
-        AdoB1gHVAf8DkQH/DAADGgEkAU0BcwEiAfoBPgFxAQIB/wE8AW4BAgH/ATsBbQECAf8BQgGKAQEB/wFm
-        Aa8BOQH/AZQB0QGBAf8BjQHJAXIB/wFVAZoBMgH/ATwBhwEAAf8BOwGGAQAB/wFPAbgBLgH/AVABvgEz
-        Af8BTQG8ATAB/wFfAWUBXQHgTAADQgF2AXIBZQFYAekB3QGWAS8B/wHdAZYBLwH/Ad0BlgEvAf8B3QGW
-        AS8B/wHdAZYBLwH/AbsBfAEwAfwCUQFQAZ8DFQEdFAADywH/A+kB/wPpAf8B4gLhAf8BywHGAcQB/wGY
-        ApcB/wGWApUB/wGUApMB/wGSApEB/wHbAdcB1gH/A5gB/xAAA0QBeQFCAYMBAwH/AUABgAEDAf8BPgFy
-        AQIB/wE8AW8BAgH/ATsBbgECAf8BOQFsAQEB/wE1AWQBAQH/AS8BWgEAAf8BPwGJAQAB/wFIAaABFAH/
-        AVkByAE9Af8BVgHFAToB/wFTAcIBNwH/AlMBTwGlTAAB3QGWAS8B/wHdAZYBLwH/Ad0BlgEvAf8B3QGW
-        AS8B/wHdAZYBLwH/AcgBgQE6Af4DVAGvAx0BKhwAAy4BSANnAeQD3wH/A+oB/wHPAcoByQH/AcsBxgHF
-        Af8BygHEAcMB/wHIAcMBwQH/AccCwQH/AdwB2QHYAf8DngH/FAACSAFHAYMBTwF/AQ4B/gFDAYQBAwH/
-        AUABgQECAf8BPwFzAQIB/wE9AXABAgH/ATsBbQEBAf8BNgFlAQEB/wFcAWQBVQHnAWABzgFDAf8BXwHP
-        AUUB/wFcAcwBQgH/AVkBygE/Af8DLAFETAAB3QGWAS8B/wHdAZYBLwH/Ad0BlgEvAf8B3QGWAS8B/wJZ
-        AVYBvgMmATgoAAMLAQ8DVgGrA9wB/wHmAuMB/wHhAd4B3AH/Ad8C3AH/Ad8B3AHbAf8B3gLbAf8B7gLs
-        Af8DpQH/GAADJwE6A1YBswFbAXcBLgH4AUMBhQEDAf8BQQGCAQIB/wFbAWEBWgHhA0QBewMHAQkDSAGD
-        AWEBdwFZAesBZQFsAV4B5QM/AW1QAAHdAZYBLwH/Ad0BlgEvAf8CXAFaAc0DLgFHOAADUQGfA6EB+wPE
-        Af8DwAH/A7sB/wO2Af8DsAH/A1IBpyAAAwQBBgMWAR8DEAEWbAABYgFhAV4B2gM1AVcDAAEB6AABQgFN
-        AT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAecF/wIAAeEB/wH4AQcB/wEfAgAB4AF/
-        AeABBwGAAQcCAAHgAR8BwAEHAQABAwIAAeQBBwHAAQcBAAEBAgAB4gEHAcABBwQAAeMBBwHAAQcEAAHj
-        AYcBwAEHBAAB4QEHAcABBwQAAeABBwHAAQcEAAHgAQcBwAEHBAAB4AEHAcABBwGAAwAB4AEfAcABBwHA
-        AwAB4AF/AeABBwHgAQECAAHhAf8B+AEHAfgB/wIAAeMF/wIACw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADU
+        DAAAAk1TRnQBSQFMAgEBAwEAAdABAAHQAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEB4AA0ABcQMsAUT4AANKAYoDSAGFAlcBVQG3Ax0BKjgAAy0BRgNdAdIDWgH/
+        A1YB/wNRAf8DTQH/A0kB/wNdAdcsAAMRARcDFgEfAwQBBmAAAmEBXQHiAwABAQJOAU0BlgGRAXYBMgH7
+        Ak4BTQGVAw8BFCgAAzABSwNcAcwDowH/AcYBxQHEAf8B2QHUAdMB/wHUAc8BzgH/AdMBzgHNAf8B0wHO
+        Ac0B/wHoAuUB/wNKAf8QAANAAXEDXAHnA1kB6wNFAX8DBwEKAUUBRgFFAX4BWAFfAVgB4wEeAZIBAAH/
+        ARsBjwEAAf8BUQFtAUYB9wFVAVYBVQGxAyYBOFgAAd0BlgEgAf8DKAE8AwIBAwJSAVABpAHdAZYBIAH/
+        AmIBWAHvAkIBQQFzAwQBBhwAA1wByQOzAf8D1AH/AeEC3wH/AcUBvwG9Af8BvQG1AbMB/wG5AbEBsAH/
+        AbkBsQGuAf8BtwGvAa4B/wHTAc4BzQH/A04B/wwAAy8BSQEUATYBAAH/ARIBMwEAAf8BDwEwAQAB/wEK
+        ASsBAAH/AVwBZAFcAecBKgGfAQMB/wEnAZwBAAH/ASQBmQEAAf8BIQGXAQAB/wEeAZQBAAH/ARsBkQEA
+        Af8BQAGOASMB/QFFAUYBRQF+VAAB3QGWASAB/wJOAU0BlgQAAwQBBgJWAVUBtAHdAZYBIAH/Ad0BlgEg
+        Af8CXAFXAd8DNgFZAwABARQAA6IB/wPwAf8D4AH/AdQC0gH/Ab4BtgG1Af8BvAG1AbQB/wG7AbQBsgH/
+        AboBsgGxAf8BuQGxAa8B/wHUAc8BzgH/A1MB/wwAA1MBqgEYAT0BAAH/ARcBOgEAAf8BFAE3AQAB/wEd
+        AVIBAAH/ARsBVQEAAf8BLAGbAQgB/wEnAZYBBQH/ASMBjwEAAf8BJAGVAQAB/wEkAZsBAAH/ASEBmQEA
+        Af8BHgGWAQAB/wEbAZMBAAH/A0IBdFAAAd0BlgEgAf8CYAFZAesDAwEEBAADBwEKAlsBWQHDAd0BlgEg
+        Af8B3QGWASAB/wHdAZYBIAH/A1kBxxQAA6gB/wPqAf8D3QH/AdUB1AHTAf8BwAG5AbcB/wG+AbcBtgH/
+        Ab0BtgG0Af8BuwG0AbMB/wG7AbMBsQH/AdQB0AHPAf8DWQH/DAADXgHlARwBQwEAAf8BGgFAAQAB/wEb
+        AUUBAAH/ASgBgQEAAf8BHwFXAQAB/wEzAZoBGwH/AUkBygE8Af8BQgHDATQB/wEnAY8BCwH/ARoBYQEA
+        Af8BJwGdAQAB/wElAZ4BAAH/ASIBmwEAAf8BPgFuAT4B+AMYASFMAAHdAZYBIAH/Ad0BlgEgAf8DLgFI
+        CAADCwEPAlwBWAHRAd0BlgEgAf8B3QGWASAB/wHdAZYBIAH/FAADrwH/A+sB/wPdAf8B1wLVAf8BwQG7
+        AbkB/wHAAbkBuAH/Ab4BuAG2Af8BIQGhASgB/wEdAZQBHQH/AdYB0QHQAf8DXgH/DAABPAFmAQwB/gEg
+        AUoBAAH/AR4BRwEAAf8BIwFVAQAB/wErAYQBAAH/AT0BnQEaAf8BggHnAWIB/wFjAeYBXQH/AV4B5wFX
+        Af8BWgHmAVIB/wErAZIBDQH/AR8BgwEAAf8BKwGlAQYB/wEoAaIBAwH/ASUBoAEAAf8DSgGKTAAB3QGW
+        ASAB/wHdAZYBIAH/A1EBogwAAxABFQJfAVoB2wHdAZYBIAH/Ad0BlgEgAf8UAAO1Af8D7AH/A94B/wHZ
+        AtgB/wHDAb0BuwH/AcIBuwG6Af8BwQG6AbkB/wGgAcgBpAH/ATYBqQE8Af8B1wHTAdEB/wNkAf8MAAJN
+        ASkB+gEkAVABAAH/ASIBTgEAAf8BJwFbAQAB/wEtAYYBAAH/AWUBzAFUAf8BjgHnAYgB/wGJAeYBgwH/
+        AYQB5gFkAf8BZQHmAV8B/wFOAcUBPgH/ARwBWwEAAf8BLgGkAQkB/wEuAaoBCwH/ASsBpwEIAf8BWAFc
+        AVgB0UwAAd0BlgEgAf8B3QGWASAB/wJnAVkB8gMGAQgEAAMFAQcDKwFCAxYBHgJfAVgB4wHdAZYBIAH/
+        FAADuwH/A+wB/wPfAf8B2gLZAf8BxgG/Ab4B/wHEAb4BvAH/AcMBvAG7Af8BwQG7AbkB/wHAAbkBuAH/
+        AdcC0wH/A4QB/wwAAVsBYAFbAdYBKAFXAQAB/wEmAVQBAAH/ASgBWAEAAf8BMgGMAQAB/wGJAc8BXQH/
+        AZoB5wGVAf8BlQHmAZAB/wGQAeYBigH/AYsB5QGFAf8BWAHHAUcB/wEiAWABAAH/AS8BngEGAf8BNAGx
+        ARQB/wExAa4BEAH/AUkBZgFCAfVMAAHdAZYBIAH/AWUBZAFTAfEDPAFmAwcBCgM/AW0CXwFYAeMB3QGW
+        ASAB/wNQAZ4DIgExAlwBVQHqFAADwAH/A+wB/wPgAf8B3QLcAf8BxwHBAcAB/wGSApEB/wOPAf8DjQH/
+        A4oB/wHZAdUB1AH/A4sB/wwAAUsBTAFLAY8BLAFeAQAB/wErAVsBAAH/ASkBWAEAAf8BMgGIAQAB/wFT
+        Aa0BKAH/AaYB5wGiAf8BoQHnAZ0B/wGcAeYBlwH/AZcB5QGSAf8BQwGhARwB/wEoAYABAAH/ATUBpAEN
+        Af8BOwG4ARwB/wE4AbUBGAH/AU0BeAEvAfpMAANWAbYDGwEmA0EBcgJhAVgB5gHdAZYBIAH/Ad0BlgEg
+        Af8B3QGWASAB/wHdAZYBIAH/A1kBxwMyAVEUAAPGAf8D7wH/A+EB/wPdAf8ByAHDAcIB/wHIAcIBwQH/
+        AcYBwQG/Af8BxQG/Ab4B/wHDAb0BuwH/AdoB1gHVAf8DkQH/DAADGgEkAU0BYgEpAfoBLwFiAQAB/wEt
+        AV8BAAH/ASwBXgEAAf8BMwGKAQAB/wFXAa8BKgH/AZQB0QGBAf8BjQHJAWMB/wFGAZoBIwH/AS0BhwEA
+        Af8BLAGGAQAB/wFAAbgBHwH/AUEBvgEkAf8BPgG8ASEB/wNfAeBMAANCAXYCYgFYAekB3QGWASAB/wHd
+        AZYBIAH/Ad0BlgEgAf8B3QGWASAB/wHdAZYBIAH/AZcBbQErAfwCUQFQAZ8DFQEdFAADywH/A+kB/wPp
+        Af8B4gLhAf8BywHGAcQB/wGYApcB/wGWApUB/wGUApMB/wGSApEB/wHbAdcB1gH/A5gB/xAAA0QBeQEz
+        AYMBAAH/ATEBgAEAAf8BLwFjAQAB/wEtAWABAAH/ASwBXwEAAf8BKgFdAQAB/wEmAVUBAAH/ASABSwEA
+        Af8BMAGJAQAB/wE5AaABBQH/AUoByAEuAf8BRwHFASsB/wFEAcIBKAH/AlMBTwGlTAAB3QGWASAB/wHd
+        AZYBIAH/Ad0BlgEgAf8B3QGWASAB/wHdAZYBIAH/AaoBfwE6Af4DVAGvAx0BKhwAAy4BSANhAeQD3wH/
+        A+oB/wHPAcoByQH/AcsBxgHFAf8BygHEAcMB/wHIAcMBwQH/AccCwQH/AdwB2QHYAf8DngH/FAACSAFH
+        AYMBTwF/AQ4B/gE0AYQBAAH/ATEBgQEAAf8BMAFkAQAB/wEuAWEBAAH/ASwBXgEAAf8BJwFWAQAB/wFc
+        AWQBXAHnAVEBzgE0Af8BUAHPATYB/wFNAcwBMwH/AUoBygEwAf8DLAFETAAB3QGWASAB/wHdAZYBIAH/
+        Ad0BlgEgAf8B3QGWASAB/wJZAVYBvgMmATgoAAMLAQ8DVgGrA9wB/wHmAuMB/wHhAd4B3AH/Ad8C3AH/
+        Ad8B3AHbAf8B3gLbAf8B7gLsAf8DpQH/GAADJwE6A1YBswFcAWMBPgH4ATQBhQEAAf8BMgGCAQAB/wFb
+        AWEBWwHhA0QBewMHAQkDSAGDAmABWQHrAmUBXgHlAz8BbVAAAd0BlgEgAf8B3QGWASAB/wJcAVoBzQMu
+        AUc4AANRAZ8DjAH7A8QB/wPAAf8DuwH/A7YB/wOwAf8DUgGnIAADBAEGAxYBHwMQARZsAAJhAV4B2gM1
+        AVcDAAEB6AABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAecF/wIAAeEB/wH4
+        AQcB/wEfAgAB4AF/AeABBwGAAQcCAAHgAR8BwAEHAQABAwIAAeQBBwHAAQcBAAEBAgAB4gEHAcABBwQA
+        AeMBBwHAAQcEAAHjAYcBwAEHBAAB4QEHAcABBwQAAeABBwHAAQcEAAHgAQcBwAEHBAAB4AEHAcABBwGA
+        AwAB4AEfAcABBwHAAwAB4AF/AeABBwHgAQECAAHhAf8B+AEHAfgB/wIAAeMF/wIACw==
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
